# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  12 Oct 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fix for
  doebuild() so that our rsync mirror will contain full digests and not just
  partial digests for x86.

  12 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
  Added --progress to rsync. This puts the file progress meters
  back on. Users have requested this, and it's not detrimental.
  Just creates a lot of output, as the man page says: "It gives
  bored users something to look at."

  12 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
  Bug 6361 -- Added checking on directories to ensure that we can
              write to them before we try and traceback. Also added
              pieces to functions so that return conditions are
              propagated back to emerge so that it actually dies on
              errors. Message on condition details restart process.

  11 Oct 2002; Nicholas Jones <carpaski@gentoo.org> make*globals:
  Removed the tomcat configs from CONFIG_PROTECT

  11 Oct 2002; Nicholas Jones <carpaski@gentoo.org> doman:
  Bug 8208 -- Added flags and auto-location support for 'x'
              manpages. Added not-an-man-page message.

  11 Oct 2002; Nicholas Jones <carpaski@gentoo.org> dohtml:
  Bug 8208 -- Added 'js' to the include list, and added '-A'
              as an append flag. '-a' was a filter-down-to.

  11 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
  Bug 8964 -- Fix for read-only traceback in digestgen()
  Bug 8949 -- Fix for read-only traceback in doebuild()
  Bug 8284 -- Prepend ARCH _after_ use order processing. Prevents -*
              from killing the ARCH flag.
  Bug 7596 -- Set an mtime of 0 into CONTENTS if the file already exists
              on the FS. Allows the entry to be in the CONTENTS file.
  Condensed the protect/protect-mask code into one function in class dblink.