@@ -1,6 +1,14 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  13 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
+	Bug 5926 -- If the fetchonly AND pretend flags are specified, then
+	            portage should give a list of all the SRC_URIs so that
+							they can be downloaded or sent into another app.
+
+	13 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
+	Bug 5926 -- See portage.py for today. (emerge -pf)
+
   12 Oct 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fix for
   doebuild() so that our rsync mirror will contain full digests and not just
   partial digests for x86.
